# guasti-transform-V2

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERIMENTS.md  GITHUB_GUIDE.md  GUASTI_CHAPTER.md  GUASTI_PAPER.md  GUASTI_WHITEPAPER.md  LICENSE  PUBLICATION_PLAN.md  RAPPORT_ANALYSE.md  README.md  README_BADGES.md  RESULTS_TEMPLATE.md  SECURITY.md  TRIADIA_CREDITS.md  __init__.py  analyze_and_visualize.py  basic_usage.py  guasti_core.py  guasti_utils.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  test_theorems.py
# .github/workflows/: ci.yml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: artifacts-index.yml  ci.yml  docs-lint.yml  experiments.yml  hardening.yml  links-check.yml  release-assets.yml  release.yml
docs/: BRANCH_PROTECTION.md  EXPERIMENTS_ON_GITHUB.md  REPO_HARDENING.md
notebooks/: README.md
src/: __init__.py  ascii_tower.py  eval.py  features.py  score.py  wheel.py
tests/: test_invariants.py
